--- a/src/test/unittest/libut.vcxproj
+++ b/src/test/unittest/libut.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="ut_alloc.c" />
     <ClCompile Include="ut_file.c" />
     <ClCompile Include="ut_backtrace.c" />
+    <ClCompile Include="ut_setup.c" />
     <ClCompile Include="ut_signal.c" />
     <ClCompile Include="ut_pthread.c" />
     <ClCompile Include="ut_fh.c" />
